--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             <div class="form-modal listaCesta">
                 <!-- TEMPLATE QUE AÑADE PRODUCTOS A LA CESTA -->
                 <template id="template-carrito">
-                    <div class="img-producto carrito-img">
-                        <img class="imgCarrito" id="imgCarrito" src="img/10.jpg" alt="">
-                    </div>
-                    <div class="contenedor-form">
+                    <div class="contenedor-list">
+                        <div class="img-producto carrito-img">
+                            <img class="imgCarrito" id="imgCarrito" src="img/10.jpg" alt="">
+                        </div>
                         <div class="text-carrito">
-                            <p class="nombre-carrito">Hola</p>
-                            <p class="precio-carrito">S/. 8</p>
-                            <p class="cantidad-carrito">3</p>
+                                <p class="nombre-carrito">Hola</p>
+                                <p class="precio-carrito">S/. 8</p>
+                                <p class="cantidad-carrito">3</p>
                         </div>
                     </div>
                 </template> 
