--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <!-- TEMPLATE QUE AÑADE PRODUCTOS A LA CESTA -->
                 <template id="template-carrito">
                     <div class="contenedor-list">
-                        <div class="img-producto carrito-img">
+                        <div class="carrito-img">
                             <img class="imgCarrito" id="imgCarrito" src="img/10.jpg" alt="">
                         </div>
                         <div class="text-carrito">
